# rust-projects

./: .gitignore  README.md  micro-SaaS-AI-guide.md
100-exercises-to-learn-rust/exercises/02_basic_calculator/01_integers/src/: lib.rs
100-exercises-to-learn-rust/exercises/02_basic_calculator/02_variables/src/: lib.rs
100-exercises-to-learn-rust/exercises/05_ticket_v2/11_dependencies/: Cargo.toml
async-await/: Cargo.toml
async-await/src/: main.rs
audio-to-wav/: Cargo.toml
audio-to-wav/src/: main.rs
basic-auth/: Cargo.toml
basic-auth/src/: main.rs
call-apis/: Cargo.toml
call-apis/src/: main.rs
download-image/: Cargo.toml
download-image/src/: main.rs
extract-links/: Cargo.toml
extract-links/src/: main.rs
file-compressor/: .gitignore  Cargo.toml  ReadMe.md  compressed
file-compressor/src/: main.rs
read-csv/: Cargo.toml
read-csv/src/: main.rs
read-json/: Cargo.toml
read-json/src/: main.rs
req-get/: Cargo.toml
req-get/src/: main.rs
rust-sql-crud/: Cargo.toml  README.md
rust-sql-crud/src/: main.rs
rust-sql-crud/src/routes/: mod.rs
rust-sql-crud/src/users/: handlers.rs  models.rs  routes.rs
rust-sql-crud/src/users/handlers/: all_users.rs  create.rs  delete_user.rs  mod.rs  root_path.rs  update_user.rs
simple-actix/: Cargo.toml
simple-actix/src/: main.rs  multiply.rhai
spotify-search-api/: Cargo.toml
spotify-search-api/src/: main.rs
spotify-search-api/src/models/: common.rs
spotify-search-api/src/utils/: helper.rs
write-json/: Cargo.toml
write-json/src/: main.rs
(+35 files in other folders)
