[package]
name = "rust-sql-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
